# Mimir

./: .gitignore  GUIDE.md  INSTALL.md  README.md  make_icon.py
.github/workflows/: build.yml  ci.yml  release.yml
backend/: .env.example  config.py  main.py  mimir-backend.spec  pytest.ini  requirements-test.txt  requirements.txt  scheduler.py  server.py  verify_tier1.py  verify_tier2.py  verify_tier3_f1.py  verify_tier3_f2.py  ws_manager.py
backend/agent/: loop.py  prompts.py  tools.py  tutor.py
backend/memory/: database.py  readiness.py  summarizer.py  vector.py
backend/routers/: chat.py  chronicle.py  examiner.py  files.py  formulas.py  graph.py  mindmap.py  progress.py  quiz.py  syllabus.py  system.py  tutor.py  users.py  voice.py
backend/tests/: conftest.py  test_agent_loop.py  test_api.py  test_exam_parser.py  test_retrieval.py  test_sm2.py  test_tools.py
backend/utils/: exam_parser.py  parser.py
backend/voice/: __init__.py  manager.py  synthesise.py  transcribe.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  config.ts  main.tsx
frontend/src/components/: AllChatsPanel.tsx  Auth.tsx  Chat.tsx  CommandPalette.tsx  ExaminerModal.tsx  FormulaSheetModal.tsx  HelpModal.tsx  InputZone.tsx  KnowledgeGraphModal.tsx  (+14 more)
scripts/: build-manifest.py  build.ps1  zip-backend.ps1  zip-backend.py
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
(+12 files in other folders)
