[package]
name = "mimir"
version = "0.1.0"
description = "Mimir — A Norse-Themed Local Study Agent"
authors = ["Sarthak Singh"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
