[package]
name = "mimir"
version = "1.0.0"
description = "Mimir — A Norse-Themed Local Study Agent"
authors = ["Sarthak Singh"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri                      = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification  = "2"
tauri-plugin-updater       = "2"
tauri-plugin-process       = "2"
tauri-plugin-global-shortcut = "2"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
zip        = "2"
